
- Add new appearance setting: colorize by direction groups automatically (groups are determined by counting how many departures go over each stop, only the first stop after the selected home stop gets counted)
- Fix crashes with context menus of deleted route stop items

- New context menu entries for journey route stops

0.10 - Beta 8
- Make leaving departures animate before being removed from the list

0.10 - Beta 6
- Port JourneySearchSuggestionWidget from a proxied QTreeView to a Plasma::ScrollWidget and add a class JourneySearchSuggestionItem, representing a single suggestion.
- Drop unused HtmlDelegate class, JourneySearchSuggestionWidget was the last class using it.
- Add a context menu to intermediate stops in journey route items. Currently contains one entry to search for Journeys to that stop. Can be handy to get some earlier connections to that intermediate stop, so that one has more time to change the vehicle.
- Draw the "public-transport-stop"-icons instead of a simple circles for route stop items (but not for the small intermediate stops).
- Add a QGraphicsDropShadowEffect to RouteStopMarkerGraphicsItem.
- Make padding in TimetableWidget/JourneyWidget smaller and adjust to the size factor defined in the settings dialog.
- New layout for multiple vehicle icons in the popup icon.
- Reduce number of needed preprocessor switches for KDE 4.5 support.

0.10 - Beta 5
- Make TimetableWidget show "from" for arrival lists and "to" for departure lists.
- Make compilable with KDE 4.5 again (tested on fedora 14).

0.10 - Beta 4