@@ -1564,6 +1564,8 @@ void PublicTransport::showJourneyList()
     m_journeyTimetable->setSvg( &m_vehiclesSvg );
     connect( m_journeyTimetable, SIGNAL(requestStopAction(StopAction,QString,QVariant,QGraphicsWidget*)),
              this, SLOT(requestStopAction(StopAction,QString,QVariant,QGraphicsWidget*)) );
+    connect( m_journeyTimetable, SIGNAL(requestAlarmCreation(QDateTime,QString,VehicleType,QString,QGraphicsWidget*)),
+             this, SLOT(processAlarmCreationRequest(QDateTime,QString,VehicleType,QString,QGraphicsWidget*)) );
     connect( m_states["journeyView"], SIGNAL(exited()),
              m_journeyTimetable, SLOT(deleteLater()) );
     m_journeyTimetable->setZoomFactor( m_settings.sizeFactor );
@@ -2345,6 +2347,40 @@ void PublicTransport::removeAlarmForDeparture( int row )
 void PublicTransport::removeAlarmForDeparture()
 {
     removeAlarmForDeparture( m_clickedItemIndex.row() );
+}
+
+void PublicTransport::processAlarmCreationRequest( const QDateTime& departure,
+        const QString& lineString, VehicleType vehicleType, const QString& target,
+        QGraphicsWidget *item )
+{
+    // Autogenerate an alarm that only matches the given departure
+    AlarmSettings alarm;
+    alarm.name = i18nc( "@info/plain Name of new automatically generated alarm filters. "
+                        "%1 is the departure time, %2 is the target.",
+                        "At %1 to %2", departure.toString(), target );
+    alarm.autoGenerated = true;
+    alarm.affectedStops << m_settings.currentStopSettingsIndex;
+    alarm.filter.append( Constraint(FilterByDeparture, FilterEquals, departure) );
+    alarm.filter.append( Constraint(FilterByTransportLine, FilterEquals, lineString) );
+    alarm.filter.append( Constraint(FilterByVehicleType, FilterIsOneOf,
+                                    QVariantList() << vehicleType) );
+    alarm.filter.append( Constraint(FilterByTarget, FilterEquals, target) );
+
+    // Append new alarm in a copy of the settings. Then write the new settings.
+    Settings settings = m_settings;
+    settings.alarmSettings << alarm;
+    writeSettings( settings );
+
+    // Add the new alarm to the list of alarms that match the given departure
+//     TODO Find a matching departure?!?
+//     JourneyGraphicsItem *journeyItem = static_cast<JourneyGraphicsItem*>( item );
+//     JourneyInfo info = *journeyItem->journeyItem()->journeyInfo();
+//     QString departureTime = KGlobal::locale()->formatTime( info.departure().time() );
+//     int index = settings.alarmSettings.count() - 1;
+//     info.matchedAlarms() << index;
+//     item->setDepartureInfo( info );
+
+    createPopupIcon();
 }
 
 void PublicTransport::createAlarmSettingsForDeparture( const QPersistentModelIndex &modelIndex )
